fix attribution alignment

--- a/stylesheets/app/main.styl
+++ b/stylesheets/app/main.styl
@@ -23,6 +23,9 @@ div.rule
   margin-bottom: 2em
   background: linear-gradient(160deg, #abb, rgba(0,0,0,0) 80%)
 
+div.attributions
+  text-align: left;
+
 span.label
   margin-right: 1em
   margin-left: 1em
